--- a/src/app/auth/login-form/login-form.component.html
+++ b/src/app/auth/login-form/login-form.component.html
@@ -1,51 +1,56 @@
 <div class="container alert alert-info">
-  <div [hidden]="submitted">
-    <h1>Login</h1>
-    <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
-      <div class="form-group">
-        <label for="name">Username</label>
-        <input
-          type="text"
-          class="form-control"
-          id="name"
-          required
-          [(ngModel)]="model.name"
-          name="name"
-          #name="ngModel"
-        />
-        <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-          Username is required
-        </div>
+  <h1>Login</h1>
+  <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input
+        type="text"
+        class="form-control"
+        id="username"
+        required
+        [(ngModel)]="userAccount.username"
+        name="username"
+        #username="ngModel"
+      />
+      <div
+        [hidden]="username.valid || username.pristine"
+        class="alert alert-danger"
+      >
+        Username is required
       </div>
+    </div>
 
-      <div class="form-group">
-        <label for="alterEgo">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="alterEgo"
-          [(ngModel)]="model.alterEgo"
-          name="alterEgo"
-        />
-        <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-          Username is required
-        </div>
+    <div class="form-group">
+      <label for="alterEgo">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password"
+        [(ngModel)]="userAccount.password"
+        name="password"
+        #password="ngModel"
+      />
+      <div
+        [hidden]="password.valid || password.pristine"
+        class="alert alert-danger"
+      >
+        Password is required
       </div>
-
+    </div>
+    <div>
       <button
         type="submit"
         class="btn btn-success"
-        [disabled]="!heroForm.form.valid"
+        [disabled]="!loginForm.form.valid"
       >
         Submit
       </button>
-      <button
-        type="button"
-        class="btn btn-default"
-        (click)="newHero(); heroForm.reset()"
+      <a
+        [routerLink]="['signup']"
+        [routerLinkActive]="['highlight-route']"
+        [routerLinkActiveOptions]="{exact: false}"
+        >Signup</a
       >
-        New Hero
-      </button>
-    </form>
-  </div>
+    </div>
+  </form>
 </div>
