redux dispatch signup

--- a/src/app/auth/components/signup.component.html
+++ b/src/app/auth/components/signup.component.html
@@ -1,1 +1,5 @@
-<signup-form></signup-form>
+<signup-form
+  [errorMessage]="error$ | async"
+  (signUpEvent)="submit($event)"
+  (resetFormEvent)="resetForm()"
+></signup-form>
