--- a/src/app/auth/login-form/login-form.component.html
+++ b/src/app/auth/login-form/login-form.component.html
@@ -45,12 +45,7 @@
       >
         Submit
       </button>
-      <a
-        [routerLink]="['signup']"
-        [routerLinkActive]="['highlight-route']"
-        [routerLinkActiveOptions]="{exact: false}"
-        >Signup</a
-      >
+      <a routerLink="/signup" routerLinkActive="active">Signup</a>
     </div>
   </form>
 </div>
