--- a/src/app/auth/signup-form/signup-form.component.html
+++ b/src/app/auth/signup-form/signup-form.component.html
@@ -1,71 +1,25 @@
 <div class="container alert alert-info">
   <h1>Registration Form</h1>
-  <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
+  <a routerLink="/signin" routerLinkActive="active">Signin</a>
+
+  <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="name">User Name</label>
+      <label>User Name</label>
       <input
+        formControlName="username"
         type="text"
         class="form-control"
-        id="name"
         required
-        [(ngModel)]="userAccount.username"
-        name="name"
-        #name="ngModel"
       />
-      <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-        Name is required
-      </div>
     </div>
 
     <div class="form-group">
       <label for="password">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="password"
-        [(ngModel)]="userAccount.password"
-        name="password"
-        #password="ngModel"
-      />
-      <div
-        [hidden]="password.valid || password.pristine"
-        class="alert alert-danger"
-      >
-        Password is required
-      </div>
+      <input formControlName="password" type="password" class="form-control" />
     </div>
-    <button
-      type="submit"
-      class="btn btn-success"
-      [disabled]="!heroForm.form.valid"
-    >
+    <button type="submit" class="btn btn-success">
       Submit
     </button>
-    <button
-      type="button"
-      class="btn btn-default"
-      (click)="newHero(); heroForm.reset()"
-    >
-      New Hero
-    </button>
+    <button type="reset" (click)="reset()">Reset</button>
   </form>
-</div>
-
-<div [hidden]="!submitted">
-  <h2>You submitted the following:</h2>
-  <div class="row">
-    <div class="col-xs-3">Name</div>
-    <div class="col-xs-9">{{ model.name }}</div>
-  </div>
-  <div class="row">
-    <div class="col-xs-3">Alter Ego</div>
-    <div class="col-xs-9">{{ model.alterEgo }}</div>
-  </div>
-  <div class="row">
-    <div class="col-xs-3">Power</div>
-    <div class="col-xs-9">{{ model.power }}</div>
-  </div>
-  <br />
-  <button class="btn btn-primary" (click)="submitted=false">Edit</button>
-  =
 </div>
