--- a/src/app/layouts/menutop.nav.comp.html
+++ b/src/app/layouts/menutop.nav.comp.html
@@ -57,6 +57,7 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
         Search
       </button>
+      <auth-state> ab</auth-state>
     </form>
   </div>
 </nav>
