--- a/src/app/app.root.comp.html
+++ b/src/app/app.root.comp.html
@@ -1,7 +1,11 @@
-<menutop-nav [hidden]="true"></menutop-nav>
+<menutop-nav *ngIf="isLogin"></menutop-nav>
+<div>
+  ab
+  <auth-state> </auth-state>
+</div>
 <div class="wrapper">
   <!-- Sidebar  -->
-  <sidebar-nav [hidden]="true"> </sidebar-nav>
+  <sidebar-nav *ngIf="isLogin"> </sidebar-nav>
   <!-- Page Content  -->
   <div id="content">
     <div id="app.root.comp">
