--- a/src/app/auth/components/login.component.html
+++ b/src/app/auth/components/login.component.html
@@ -1,3 +1,6 @@
 <div class="wrap-login-form">
-  <login-form></login-form>
+  <login-form
+    [errorMessage]="error$ | async"
+    (loginEvent)="submit($event)"
+  ></login-form>
 </div>
