--- a/src/app/app.root.comp.html
+++ b/src/app/app.root.comp.html
@@ -1,7 +1,6 @@
 <menutop-nav *ngIf="isLogin"></menutop-nav>
 <div>
-  ab
-  <auth-state> </auth-state>
+  isLogin {{isLogin}} 
 </div>
 <div class="wrapper">
   <!-- Sidebar  -->
