--- a/src/app/dashboard/dash.comp.html
+++ b/src/app/dashboard/dash.comp.html
@@ -1,7 +1,6 @@
-<form-comp>
-
-</form-comp>
-
+<app-formbuilder></app-formbuilder>
+<!-- <form-comp> </form-comp> -->
 
 
-<a routerLink="/products">Go To Product</a>
+
+<!-- <a routerLink="/products">Go To Product</a> -->
